CSS/styles.css
/* ... */
/*------------------------------------------------------------------
    ^HEADER
-------------------------------------------------------------------*/
header {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 10;
}

input[placeholder],
textarea[placeholder] {
  font-size: .85rem;
  font-family: 'Archivo Black', sans-serif;
}

.reverse-color {
  color: var(--color-background);
}

#header {
  background: var(--color-background);
  /* background: linear-gradient(68deg, rgba(1,64,160,1) 0%, rgba(1,64,160,1) 65%, rgba(25,100,218,1) 100%);   */
  color: var(--color-main-light);
  height: 75px;
  display: flex;
  justify-content: space-between;
  padding: 10px 10%;
}

#header a {
  color: var(--color-main-dark);
}
.logo a {
 color: var(--color-background-alt);
 font-family: 'Oswald', sans-serif;
 text-decoration: none;
 letter-spacing: -1px;
}

.logo {
  display: flex;
  flex: 1 2;
  justify-content: center;
  align-items: center;
}

.nav {
  display: flex;
  justify-content: end;
  align-items: center;
  flex: 3 1;
}

.nav-link {
  margin-right: 1.45rem;
}

.nav-link:last-of-type {
  margin-right: 0;
}

.toggle-menu ion-icon {
  color: var(--color-main-light);
  font-size: 2.5rem;
  vertical-align: middle;
  margin: 0;
  display: none;
  min-width: 44px;
  min-height: 44px;
  align-items: center;
  justify-content: center;
  margin-left: auto;
}

.toggle-menu ion-icon:hover,
.toggle-menu ion-icon:focus {
  border: 1px solid var(--color-background-alt);
  border-radius: 5px;
}

#welcome-section {
  display: flex;
  justify-content: center;
  height:80vh;
  margin-top: 50px;
}

.img,
.intro {
  display: flex;
  padding: 100px 2%;
}

.img {
  flex: 1 2;
}

.img img {
   display: block;
   border: 1px solid transparent;
   border-radius: 5px;
   height: 30vh;
   width: 30vh;
   margin-left: 15rem;
}

.intro {
  flex-direction: column;
  flex: 3 2;
}

.intro p,
.intro h2 {
  width: 80%;
}

.intro p:last-of-type {
  margin-bottom: 10px;
}

.reachout {
  border: 1px solid var(--color-main-dark);
  background-color: var(--color-main-dark);
  padding: 10px 15px;
  border-radius: 5px;
  font-weight: bold;
}

#header a.reachout {
  color: var(--color-background);
}

.reachout:hover,
.reachout:focus {
  background-color: var(--color-background);
  border: 1px solid var(--color-main-dark);

}

#header a.reachout:hover,
#header a.reachout.focus {
  text-decoration: none;
  color: var(--color-main-dark);
}

.reachout-alt {
  border: 1px solid var(--color-dist);
  background-color: var(--color-background);
  color: var(--color-dist);
  padding: 5px 10px;
  border-radius: 5px;
  font-weight: bold;
}

.reachout-alt:hover,
.reachout-alt:focus {
  background-color: var(--color-dist);
  border: 1px solid var(--color-background);
  color: var(--color-background);
  text-decoration: none;
}

/*------------------------------------------------------------------
    ^Newsletter
-------------------------------------------------------------------*/
#newsletter {
  background-color: var(--color-background-alt);
  color: var(--color);
}

/*------------------------------------------------------------------
    ^SERVICES
-------------------------------------------------------------------*/
#services {
  color: var(--color);
}

.my-services {
  display:grid;
  grid-template-columns: repeat(2, 1fr);
  grid-auto-rows: auto;
  grid-gap: 1rem;
}

.card-container {
   padding: 20px;
}

.services-img {
  width: 3.75rem;
  height: auto;
  color: var(--color-main-dark);
}

/*------------------------------------------------------------------
    ^PROJECTS
-------------------------------------------------------------------*/
#projects {
  display: flex;
  flex-direction: column;
  background: var(--color-background-alt);
  padding-bottom: 50px;
}

.works {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, 350px) );
  grid-gap: 30px;
  margin-top: 50px;
}

.works a {
  text-decoration: none;
}

.project-tile {
  height: 14.375rem;
  border-radius: 5px;
  color: var(--color-background);
  font-size: 2.5rem;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  display: flex;
  flex-direction: column;
}

.project-tile:first-of-type {
  background-image: linear-gradient(rgba(113, 89, 244,.6), rgba(113, 89, 244,.6)), url("../img/santorini-small.jpg");
}

.project-tile:nth-of-type(2) {
  background-image: linear-gradient(rgba(113, 89, 244,.6), rgba(113, 89, 244,.6)), url("../img/tigani-small.jpg");
}

.project-tile:nth-of-type(3) {
    background-image: linear-gradient(rgba(113, 89, 244,.6), rgba(113, 89, 244,.6)), url("../img/spring-small.jpg");
}

.project-tile--text {
 padding: 30px;
}

.project-tile:hover,
.project-tile:focus {
  text-decoration: none;
}

.project-tile--text h3 {
  color: var(--color-background);
  font-size: 1.25rem;
  margin-bottom: 10px;
}

.work-image {
  height: calc(100% - 5rem);
  width: 100%;
  display: block;
  margin: 1% auto;
}

.work-title {
  text-align: left;
  margin: 0;
  padding: 0;
}

p.work-title {
  font-size: 40%;
}

/*------------------------------------------------------------------
    ^clients
-------------------------------------------------------------------*/
#clients {
  display: flex;
  background-color: var(--color-background);
}

.testimonials {
  flex: 5 1;
  padding: 0 5%;
}

.testimonials-quote {
  margin: 100px 0;
}

.testimonial-giver {
  display: flex;
  align-items: center;
  padding: 10px 1.5rem;
}

.testimonial-giver img{
  border: 2px solid var(--color-main-light);
  border-radius: 5px;
  min-width: 6.25rem;
  width: 10%;
}

.sig {
  display: flex;
  flex-direction: column;
  margin-left: 15px;
}

.sig .title {
  font-size: .75rem;
}

#clients a {
  font-size: 1.25rem;
}

span.arrow {
  vertical-align: middle;
}
/* ... */

